🔧 SecurityConfig 수정: API 접근 허용 경로 추가 및 CORS 설정에서 허용 출처 목록 변경